--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="sketch.js"></script>
+    <script src="vehicle.js"></script>
+    
+
+  </head>
+  <body>
+  </body>
+</html>
